@@ -1,12 +1,19 @@
 package com.group7.krisefikser.service;
 
+import static java.util.stream.Collectors.toList;
+
+import com.group7.krisefikser.dto.request.ChangeStorageItemSharedStatusRequest;
 import com.group7.krisefikser.dto.request.StorageItemRequest;
+import com.group7.krisefikser.dto.request.StorageItemSortRequest;
 import com.group7.krisefikser.dto.response.AggregatedStorageItemResponse;
 import com.group7.krisefikser.dto.response.ItemResponse;
+import com.group7.krisefikser.dto.response.StorageItemGroupResponse;
 import com.group7.krisefikser.dto.response.StorageItemResponse;
 import com.group7.krisefikser.enums.ItemType;
+import com.group7.krisefikser.model.Household;
 import com.group7.krisefikser.model.Item;
 import com.group7.krisefikser.model.StorageItem;
+import com.group7.krisefikser.repository.HouseholdRepository;
 import com.group7.krisefikser.repository.ItemRepo;
 import com.group7.krisefikser.repository.StorageItemRepo;
 import java.time.LocalDateTime;
@@ -14,10 +21,13 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
+import java.util.NoSuchElementException;
+import java.util.Objects;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 /**
  * This class is a service for managing storage items.
@@ -29,6 +39,9 @@ import org.springframework.stereotype.Service;
 public class StorageItemService {
   private final StorageItemRepo storageItemRepo;
   private final ItemRepo itemRepo;
+  private final HouseholdService householdService;
+  private final HouseholdRepository householdRepository;
+  private final ItemService itemService;
   private static final Logger logger = Logger.getLogger(StorageItemService.class.getName());
 
 
@@ -43,15 +56,63 @@ public class StorageItemService {
   }
 
   /**
+   * Retrieves all shared storage items for a specific group from the repository.
+   * Using the group ID for the current user, it fetches all storage items that are
+   * marked as shared.
+   *
+   * @return A list of all shared storage items available for the specified group.
+   */
+  public List<AggregatedStorageItemResponse> getSharedStorageItemsInGroup(
+          List<String> itemTypesString,
+          StorageItemSortRequest sortRequest) {
+    List<ItemType> itemTypes = itemService.convertToItemTypes(itemTypesString);
+    long groupId = householdService.getGroupIdForCurrentUser();
+    List<StorageItem> storageItems = storageItemRepo.getAllSharedStorageItemsInGroup(groupId);
+
+    List<AggregatedStorageItemResponse> aggregatedItems =
+            aggregateStorageItems(storageItems, null, null);
+
+    return filterAndSortAggregatedStorageItems(
+            aggregatedItems,
+            itemTypes,
+            sortRequest.getSortBy(),
+            sortRequest.getSortDirection()
+    );
+  }
+
+  /**
    * Retrieves storage items by their item ID for a specific household.
    *
-   * @param itemId The item ID of the storage items to retrieve.
+   * @param itemId      The item ID of the storage items to retrieve.
    * @param householdId The ID of the household the storage items belong to.
    * @return A list of storage items of the specified item.
    */
   public List<StorageItem> getStorageItemsByItemId(int itemId, int householdId) {
     return storageItemRepo.findByItemId(itemId, householdId);
   }
+
+  /**
+   * Retrieves all storage items for a specific group ID and item ID.
+   *
+   * @param itemId The itemID of the items to retrieve.
+   * @return The storage item with the specified ID, or null if not found.
+   */
+  public List<StorageItemGroupResponse> getSharedStorageItemsInGroupByItemId(
+          int itemId) {
+    Long groupId = householdService.getGroupIdForCurrentUser();
+
+    List<StorageItem> storageItems = storageItemRepo
+            .getSharedStorageItemsInGroupByItemId(itemId, groupId);
+
+
+    return storageItems.stream()
+            .map(storageItem -> new StorageItemGroupResponse(
+                    convertToStorageItemResponse(storageItem),
+                    householdService.getHouseholdNameById((long) storageItem.getHouseholdId())
+            ))
+            .toList();
+  }
+
 
   /**
    * Adds a new storage item to the repository after validating it.
@@ -85,7 +146,7 @@ public class StorageItemService {
   public StorageItem updateStorageItem(int id, int householdId, StorageItem storageItem) {
     if (!storageItemExists(id, householdId)) {
       throw new RuntimeException("Storage item not found with id: " + id
-        + " in household: " + householdId);
+              + " in household: " + householdId);
     }
 
     validateStorageItem(storageItem);
@@ -102,15 +163,55 @@ public class StorageItemService {
   }
 
   /**
+   * Updates a shared storage item from the request.
+   * This method checks if the item is shared and if the user belongs to the same group
+   * before allowing the update.
+   *
+   * @param id      The ID of the storage item to be updated.
+   * @param request The request containing the updated storage item details.
+   * @return The updated storage item response.
+   */
+  public StorageItemResponse updateSharedStorageItem(int id,
+                                                     StorageItemRequest request) {
+
+
+    Long userGroupId = householdService.getGroupIdForCurrentUser();
+    StorageItem item = storageItemRepo.findById(id).orElseThrow(
+            () -> new NoSuchElementException("Storage item not found with id: " + id)
+    );
+    if (!item.isShared()) {
+      throw new IllegalArgumentException("Item is not shared, user is not allowed to "
+              + "update");
+    }
+
+    Household household = householdRepository.getHouseholdById((long) item.getHouseholdId())
+            .orElseThrow(() -> new NoSuchElementException("Household not found with id: "
+                    + item.getHouseholdId()));
+    if (!household.getEmergencyGroupId().equals(userGroupId)) {
+      throw new IllegalArgumentException("User is not allowed to update this item");
+    }
+    return updateStorageItemFromRequest(id, item.getHouseholdId(), request);
+  }
+
+  /**
    * Deletes a storage item from the repository by its ID.
    *
    * @param id          The ID of the storage item to be deleted.
    * @param householdId The ID of the household the storage item belongs to.
    */
   public void deleteStorageItem(int id, int householdId) {
-    if (!storageItemExists(id, householdId)) {
-      throw new RuntimeException("Storage item not found with id: " + id
-        + " in household: " + householdId);
+    Long groupId = householdService.getGroupIdForCurrentUser();
+    StorageItem storageItem = storageItemRepo.findById(id)
+                    .orElseThrow(() -> new NoSuchElementException(
+                    "Storage item not found with id: " + id));
+    Household household = householdRepository.getHouseholdById((long) householdId)
+            .orElseThrow(() -> new RuntimeException("Household not found with id: "
+                    + householdId));
+
+    if (storageItem.getHouseholdId() != householdId
+            && (!Objects.equals(groupId, household.getEmergencyGroupId())
+                || !storageItem.isShared())) {
+      throw new IllegalArgumentException("User is not allowed to delete this item");
     }
 
     storageItemRepo.deleteById(id, householdId);
@@ -163,7 +264,7 @@ public class StorageItemService {
    * @return true if the storage item exists, false otherwise.
    */
   public boolean storageItemExists(int id, int householdId) {
-    return storageItemRepo.findById(id, householdId).isPresent();
+    return storageItemRepo.findById(id).isPresent();
   }
 
   /**
@@ -203,15 +304,15 @@ public class StorageItemService {
    */
   public List<StorageItemResponse> convertToStorageItemResponses(List<StorageItem> storageItems) {
     return storageItems.stream()
-      .map(this::convertToStorageItemResponse)
-      .collect(Collectors.toList());
+            .map(this::convertToStorageItemResponse)
+            .toList();
   }
 
   /**
    * Adds a new storage item based on the provided request DTO.
    *
    * @param householdId The household ID to assign to the new storage item
-   * @param request The request containing the storage item details
+   * @param request     The request containing the storage item details
    * @return The response DTO for the created storage item
    */
   public StorageItemResponse addStorageItemFromRequest(int householdId,
@@ -225,9 +326,9 @@ public class StorageItemService {
   /**
    * Updates an existing storage item based on the provided request DTO.
    *
-   * @param id The ID of the storage item to update
+   * @param id          The ID of the storage item to update
    * @param householdId The household ID the storage item belongs to
-   * @param request The request containing the updated storage item details
+   * @param request     The request containing the updated storage item details
    * @return The response DTO for the updated storage item
    */
   public StorageItemResponse updateStorageItemFromRequest(int id, int householdId,
@@ -253,22 +354,34 @@ public class StorageItemService {
    * Aggregates storage items by item ID for a specific household,
    * with optional sorting.
    *
-   * @param householdId The ID of the household
-   * @param sortBy The field to sort by (e.g., "quantity", "expirationDate", "name")
+   * @param householdId   The ID of the household
+   * @param sortBy        The field to sort by (e.g., "quantity", "expirationDate", "name")
    * @param sortDirection The direction of sorting (e.g., "asc" or "desc")
    * @return A list of aggregated storage item responses
    */
   public List<AggregatedStorageItemResponse> getAggregatedStorageItems(
-      int householdId,
-      String sortBy,
-      String sortDirection) {
-
-    // Get all storage items for the household
+          int householdId,
+          String sortBy,
+          String sortDirection) {
     List<StorageItem> allItems = storageItemRepo.getAllStorageItems(householdId);
 
-    // Group items by itemId
-    Map<Integer, List<StorageItem>> groupedByItemId = allItems.stream()
-         .collect(Collectors.groupingBy(StorageItem::getItemId));
+    return aggregateStorageItems(allItems, sortBy, sortDirection);
+  }
+
+  /**
+   * Aggregates storage items by item ID and creates a list of aggregated responses.
+   *
+   * @param storageItems  The list of all storage items
+   * @param sortBy        The field to sort by (e.g., "quantity", "expirationDate", "name")
+   * @param sortDirection The direction of sorting (e.g., "asc" or "desc")
+   * @return A list of aggregated storage item responses
+   */
+  public List<AggregatedStorageItemResponse> aggregateStorageItems(
+          List<StorageItem> storageItems,
+          String sortBy,
+          String sortDirection) {
+    Map<Integer, List<StorageItem>> groupedByItemId = storageItems.stream()
+            .collect(Collectors.groupingBy(StorageItem::getItemId));
 
     // Create aggregated responses
     List<AggregatedStorageItemResponse> result = new ArrayList<>();
@@ -278,15 +391,15 @@ public class StorageItemService {
       List<StorageItem> items = entry.getValue();
 
       // Calculate total quantity
-      int totalQuantity = items.stream()
-          .mapToInt(StorageItem::getQuantity)
-          .sum();
+      double totalQuantity = items.stream()
+              .mapToDouble(StorageItem::getQuantity)
+              .sum();
 
       // Find earliest expiration date
       LocalDateTime earliestDate = items.stream()
-          .map(StorageItem::getExpirationDate)
-          .min(LocalDateTime::compareTo)
-          .orElse(null);
+              .map(StorageItem::getExpirationDate)
+              .min(LocalDateTime::compareTo)
+              .orElse(null);
 
       // Get item details
       Item item = null;
@@ -301,11 +414,10 @@ public class StorageItemService {
 
       // Create the aggregated response
       AggregatedStorageItemResponse aggregated = new AggregatedStorageItemResponse(
-          itemId,
-          itemResponse,
-          totalQuantity,
-          earliestDate,
-          householdId
+              itemId,
+              itemResponse,
+              totalQuantity,
+              earliestDate
       );
 
       result.add(aggregated);
@@ -314,7 +426,7 @@ public class StorageItemService {
     // Apply sorting if provided
     if (sortBy != null && !sortBy.isEmpty()) {
       Comparator<AggregatedStorageItemResponse> comparator =
-          createAggregatedComparator(sortBy, sortDirection);
+              createAggregatedComparator(sortBy, sortDirection);
       result.sort(comparator);
     }
 
@@ -324,21 +436,21 @@ public class StorageItemService {
   /**
    * Creates a comparator for sorting aggregated storage items.
    *
-   * @param sortBy The field to sort by
+   * @param sortBy        The field to sort by
    * @param sortDirection The direction of sorting
    * @return A comparator for sorting aggregated storage items
    */
   private Comparator<AggregatedStorageItemResponse> createAggregatedComparator(
-      String sortBy, String sortDirection) {
+          String sortBy, String sortDirection) {
     Comparator<AggregatedStorageItemResponse> comparator = switch (sortBy.toLowerCase()) {
       case "quantity" -> Comparator.comparing(AggregatedStorageItemResponse::getTotalQuantity);
       case "expirationdate" -> Comparator.comparing(
-        AggregatedStorageItemResponse::getEarliestExpirationDate,
-        Comparator.nullsLast(Comparator.naturalOrder())
+              AggregatedStorageItemResponse::getEarliestExpirationDate,
+              Comparator.nullsLast(Comparator.naturalOrder())
       );
       case "name" -> Comparator.comparing(
-        response -> response.getItem() != null ? response.getItem().getName() : "",
-        String.CASE_INSENSITIVE_ORDER
+              response -> response.getItem() != null ? response.getItem().getName() : "",
+              String.CASE_INSENSITIVE_ORDER
       );
       default -> Comparator.comparing(AggregatedStorageItemResponse::getItemId);
     };
@@ -350,37 +462,51 @@ public class StorageItemService {
    * Aggregates storage items by item ID for a specific household,
    * with optional filtering and sorting.
    *
-   * @param householdId The ID of the household
-   * @param itemTypes The item types to filter by
-   * @param sortBy The field to sort by
+   * @param householdId   The ID of the household
+   * @param itemTypes     The item types to filter by
+   * @param sortBy        The field to sort by
    * @param sortDirection The direction of sorting
    * @return A list of filtered and sorted aggregated storage item responses
    */
   public List<AggregatedStorageItemResponse> getFilteredAndSortedAggregatedItems(
-      int householdId,
-      List<ItemType> itemTypes,
-      String sortBy,
-      String sortDirection) {
+          int householdId,
+          List<ItemType> itemTypes,
+          String sortBy,
+          String sortDirection) {
 
     // Get aggregated items
     List<AggregatedStorageItemResponse> aggregatedItems =
-        getAggregatedStorageItems(householdId, null, null);
+            getAggregatedStorageItems(householdId, null, null);
 
-    // Apply filtering if types are provided
+
+    return filterAndSortAggregatedStorageItems(
+            aggregatedItems,
+            itemTypes,
+            sortBy,
+            sortDirection
+    );
+  }
+
+  private List<AggregatedStorageItemResponse> filterAndSortAggregatedStorageItems(
+          List<AggregatedStorageItemResponse> aggregatedItems,
+          List<ItemType> itemTypes,
+          String sortBy,
+          String sortDirection) {
+
     List<AggregatedStorageItemResponse> filteredItems = aggregatedItems;
     if (itemTypes != null && !itemTypes.isEmpty()) {
       filteredItems = aggregatedItems.stream()
-        .filter(aggregated ->
-          aggregated.getItem() != null
-            &&
-            itemTypes.contains(aggregated.getItem().getType()))
-        .collect(Collectors.toList());
+              .filter(aggregated ->
+                      aggregated.getItem() != null
+                              &&
+                              itemTypes.contains(aggregated.getItem().getType()))
+              .collect(toList());
     }
 
     // Apply sorting if provided
     if (sortBy != null && !sortBy.isEmpty()) {
       Comparator<AggregatedStorageItemResponse> comparator =
-          createAggregatedComparator(sortBy, sortDirection);
+              createAggregatedComparator(sortBy, sortDirection);
       filteredItems.sort(comparator);
     }
 
@@ -390,50 +516,99 @@ public class StorageItemService {
   /**
    * Searches for aggregated storage items by item name and/or type.
    *
-   * @param householdId The ID of the household
-   * @param searchTerm The search term to match against item names (can be null)
-   * @param itemTypes The item types to filter by (can be null or empty)
-   * @param sortBy The field to sort by (can be null)
+   * @param householdId   The ID of the household
+   * @param searchTerm    The search term to match against item names (can be null)
+   * @param itemTypes     The item types to filter by (can be null or empty)
+   * @param sortBy        The field to sort by (can be null)
    * @param sortDirection The direction of sorting (can be null)
    * @return A list of matching aggregated storage item responses
    */
   public List<AggregatedStorageItemResponse> searchAggregatedStorageItems(
-      int householdId,
-      String searchTerm,
-      List<ItemType> itemTypes,
-      String sortBy,
-      String sortDirection) {
+          int householdId,
+          String searchTerm,
+          List<ItemType> itemTypes,
+          String sortBy,
+          String sortDirection) {
 
     // Get all aggregated items for this household
     List<AggregatedStorageItemResponse> allItems = getAggregatedStorageItems(householdId);
 
     // Apply filtering based on search term and item types
     List<AggregatedStorageItemResponse> filteredItems = allItems.stream()
-        .filter(item -> {
-          boolean matchesSearchTerm = true;
-          boolean matchesItemType = true;
+            .filter(item -> {
+              boolean matchesSearchTerm = true;
+              boolean matchesItemType = true;
 
-          // Filter by search term if provided (case-insensitive partial match)
-          if (searchTerm != null && !searchTerm.trim().isEmpty() && item.getItem() != null) {
-            matchesSearchTerm = item.getItem().getName().toLowerCase()
-              .contains(searchTerm.toLowerCase().trim());
-          }
+              // Filter by search term if provided (case-insensitive partial match)
+              if (searchTerm != null && !searchTerm.trim().isEmpty() && item.getItem() != null) {
+                matchesSearchTerm = item.getItem().getName().toLowerCase()
+                        .contains(searchTerm.toLowerCase().trim());
+              }
 
-          // Filter by item types if provided
-          if (itemTypes != null && !itemTypes.isEmpty() && item.getItem() != null) {
-            matchesItemType = itemTypes.contains(item.getItem().getType());
-          }
+              // Filter by item types if provided
+              if (itemTypes != null && !itemTypes.isEmpty() && item.getItem() != null) {
+                matchesItemType = itemTypes.contains(item.getItem().getType());
+              }
 
-          return matchesSearchTerm && matchesItemType;
-        })
-        .collect(Collectors.toList());
+              return matchesSearchTerm && matchesItemType;
+            })
+            .collect(toList());
 
     // Apply sorting if provided
     if (sortBy != null && !sortBy.isEmpty()) {
       Comparator<AggregatedStorageItemResponse> comparator =
-          createAggregatedComparator(sortBy, sortDirection);
+              createAggregatedComparator(sortBy, sortDirection);
       filteredItems.sort(comparator);
     }
     return filteredItems;
   }
+
+  /**
+   * Changes the shared status of a storage item and updates its quantity.
+   * If the quantity is changed, a new storage item is created with the updated quantity.
+   *
+   * @param id      The ID of the storage item to update
+   * @param request The request containing the new shared status and quantity
+   * @return A list of updated storage item responses
+   */
+  @Transactional
+  public List<StorageItemResponse> updateStorageItemSharedStatus(
+          int id, long householdId, ChangeStorageItemSharedStatusRequest request) {
+    StorageItem storageItem = storageItemRepo.findById(id).orElseThrow(
+            () -> new NoSuchElementException("Storage item not found with id: " + id)
+    );
+    if (storageItem.getHouseholdId() != householdId) {
+      throw new IllegalArgumentException("User is not allowed to update this item");
+    }
+    if (storageItem.isShared() == Boolean.TRUE.equals(request.getIsShared())) {
+      throw new IllegalArgumentException("Storage item already has the requested shared status");
+    }
+
+    double quantityToMove = request.getQuantity();
+    double previousQuantity = storageItem.getQuantity();
+    if (quantityToMove > previousQuantity) {
+      throw new IllegalArgumentException("Cannot move more than the available quantity");
+    } else if (quantityToMove == previousQuantity) {
+      storageItem.setShared(request.getIsShared());
+      return convertToStorageItemResponses(List.of(storageItemRepo.update(storageItem)));
+    } else {
+      StorageItem newStorageItem = new StorageItem();
+      newStorageItem.setExpirationDate(storageItem.getExpirationDate());
+      newStorageItem.setQuantity(previousQuantity - quantityToMove);
+      newStorageItem.setHouseholdId(storageItem.getHouseholdId());
+      newStorageItem.setItemId(storageItem.getItemId());
+      newStorageItem.setShared(storageItem.isShared());
+
+      storageItem.setQuantity(quantityToMove);
+      storageItem.setShared(request.getIsShared());
+
+      List<StorageItem> updatedItems = List.of(
+              storageItemRepo.update(storageItem),
+              storageItemRepo.add(newStorageItem)
+      );
+
+      return convertToStorageItemResponses(updatedItems);
+    }
+  }
+
 }
